--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -83,13 +83,16 @@
     <ClInclude Include="BoneHierachy.h" />
     <ClInclude Include="cBaseObject.h" />
     <ClInclude Include="cBaseskill.h" />
+    <ClInclude Include="cBasilisk.h" />
     <ClInclude Include="cBerserker.h" />
     <ClInclude Include="cBoundBox.h" />
     <ClInclude Include="cBoundSphere.h" />
     <ClInclude Include="cCamera.h" />
+    <ClInclude Include="cDragon.h" />
     <ClInclude Include="cDXFontManager.h" />
     <ClInclude Include="cFrustum.h" />
     <ClInclude Include="cGizmoManager.h" />
+    <ClInclude Include="cGriff.h" />
     <ClInclude Include="cImage.h" />
     <ClInclude Include="cInven.h" />
     <ClInclude Include="cItem.h" />
@@ -101,6 +104,7 @@
     <ClInclude Include="cLogMgr.h" />
     <ClInclude Include="cMage.h" />
     <ClInclude Include="cMainGame.h" />
+    <ClInclude Include="cMinotauros.h" />
     <ClInclude Include="cMonster.h" />
     <ClInclude Include="cMonsterManager.h" />
     <ClInclude Include="cPartcleEmitter.h" />
@@ -128,7 +132,9 @@
     <ClInclude Include="cSkinnedAnimation.h" />
     <ClInclude Include="cSoundManager.h" />
     <ClInclude Include="cSpider.h" />
+    <ClInclude Include="cSpiderQueen.h" />
     <ClInclude Include="cSpriteManager.h" />
+    <ClInclude Include="cSuccubus.h" />
     <ClInclude Include="cTerrain.h" />
     <ClInclude Include="cTimeMgr.h" />
     <ClInclude Include="cTrailRender.h" />
@@ -154,13 +160,16 @@
     <ClCompile Include="BoneHierachy.cpp" />
     <ClCompile Include="cBaseObject.cpp" />
     <ClCompile Include="cBaseskill.cpp" />
+    <ClCompile Include="cBasilisk.cpp" />
     <ClCompile Include="cBerserker.cpp" />
     <ClCompile Include="cBoundBox.cpp" />
     <ClCompile Include="cBoundSphere.cpp" />
     <ClCompile Include="cCamera.cpp" />
+    <ClCompile Include="cDragon.cpp" />
     <ClCompile Include="cDXFontManager.cpp" />
     <ClCompile Include="cFrustum.cpp" />
     <ClCompile Include="cGizmoManager.cpp" />
+    <ClCompile Include="cGriff.cpp" />
     <ClCompile Include="cImage.cpp" />
     <ClCompile Include="cInven.cpp" />
     <ClCompile Include="cItem.cpp" />
@@ -172,6 +181,7 @@
     <ClCompile Include="cLogMgr.cpp" />
     <ClCompile Include="cMage.cpp" />
     <ClCompile Include="cMainGame.cpp" />
+    <ClCompile Include="cMinotauros.cpp" />
     <ClCompile Include="cMonster.cpp" />
     <ClCompile Include="cMonsterManager.cpp" />
     <ClCompile Include="cPartcleEmitter.cpp" />
@@ -199,7 +209,9 @@
     <ClCompile Include="cSkinnedAnimation.cpp" />
     <ClCompile Include="cSoundManager.cpp" />
     <ClCompile Include="cSpider.cpp" />
+    <ClCompile Include="cSpiderQueen.cpp" />
     <ClCompile Include="cSpriteManager.cpp" />
+    <ClCompile Include="cSuccubus.cpp" />
     <ClCompile Include="cTerrain.cpp" />
     <ClCompile Include="cTimeMgr.cpp" />
     <ClCompile Include="cTrailRender.cpp" />
