--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -267,6 +267,9 @@
     <ClInclude Include="cInven2.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="cSkill_Round.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -495,6 +498,9 @@
       <Filter>Scenes</Filter>
     </ClCompile>
     <ClCompile Include="cInven2.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cSkill_Round.cpp">
       <Filter>Component</Filter>
     </ClCompile>
   </ItemGroup>
