--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="cSkill_Round.h">
       <Filter>Component</Filter>
     </ClInclude>
+    <ClInclude Include="cDragonTest.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -502,6 +505,9 @@
     </ClCompile>
     <ClCompile Include="cSkill_Round.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="cDragonTest.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
