--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -129,8 +129,13 @@
     <ClInclude Include="cSetBoundObject.h" />
     <ClInclude Include="cSingletonBase.h" />
     <ClInclude Include="cSkill_DarkRain.h" />
+    <ClInclude Include="cSkill_Escape.h" />
+    <ClInclude Include="cSkill_FlameRoad.h" />
     <ClInclude Include="cSkill_Front.h" />
+    <ClInclude Include="cSkill_MagicShild.h" />
+    <ClInclude Include="cSkill_Meteo.h" />
     <ClInclude Include="cSkill_Round.h" />
+    <ClInclude Include="cSkill_SelfBuff.h" />
     <ClInclude Include="cSkill_SnowStorm.h" />
     <ClInclude Include="cSkill_Surround.h" />
     <ClInclude Include="cSkinnedAnimation.h" />
@@ -211,8 +216,13 @@
     <ClCompile Include="cSetBoundObject.cpp" />
     <ClCompile Include="cSingletonBase.cpp" />
     <ClCompile Include="cSkill_DarkRain.cpp" />
+    <ClCompile Include="cSkill_Escape.cpp" />
+    <ClCompile Include="cSkill_FlameRoad.cpp" />
     <ClCompile Include="cSkill_Front.cpp" />
+    <ClCompile Include="cSkill_MagicShild.cpp" />
+    <ClCompile Include="cSkill_Meteo.cpp" />
     <ClCompile Include="cSkill_Round.cpp" />
+    <ClCompile Include="cSkill_SelfBuff.cpp" />
     <ClCompile Include="cSkill_SnowStorm.cpp" />
     <ClCompile Include="cSkill_Surround.cpp" />
     <ClCompile Include="cSkinnedAnimation.cpp" />
