--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="cScene_testMonster.h" />
     <ClInclude Include="cSetBoundObject.h" />
     <ClInclude Include="cSingletonBase.h" />
+    <ClInclude Include="cSkill_Burserk.h" />
     <ClInclude Include="cSkill_DarkRain.h" />
     <ClInclude Include="cSkill_Round.h" />
     <ClInclude Include="cSkill_SnowStorm.h" />
@@ -209,6 +210,7 @@
     <ClCompile Include="cScene_testMonster.cpp" />
     <ClCompile Include="cSetBoundObject.cpp" />
     <ClCompile Include="cSingletonBase.cpp" />
+    <ClCompile Include="cSkill_Burserk.cpp" />
     <ClCompile Include="cSkill_DarkRain.cpp" />
     <ClCompile Include="cSkill_Round.cpp" />
     <ClCompile Include="cSkill_SnowStorm.cpp" />
