--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -301,7 +301,10 @@
       <Filter>GameActor\Skill</Filter>
     </ClInclude>
     <ClInclude Include="cSkill_Swing.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>GameActor\Skill</Filter>
+    </ClInclude>
+    <ClInclude Include="cViewDamage.h">
+      <Filter>Common</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -564,7 +567,10 @@
       <Filter>GameActor\Skill</Filter>
     </ClCompile>
     <ClCompile Include="cSkill_Swing.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>GameActor\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="cViewDamage.cpp">
+      <Filter>Common</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
