몬스터 업데이트및 틱 함수 업데이트
ㅇㅁㄴㅇ

--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="cSpriteManager.h" />
     <ClInclude Include="cSuccubus.h" />
     <ClInclude Include="cTerrain.h" />
+    <ClInclude Include="cTickFunc.h" />
     <ClInclude Include="cTimeMgr.h" />
     <ClInclude Include="cTrailRender.h" />
     <ClInclude Include="cTransform.h" />
@@ -237,6 +238,7 @@
     <ClCompile Include="cSpriteManager.cpp" />
     <ClCompile Include="cSuccubus.cpp" />
     <ClCompile Include="cTerrain.cpp" />
+    <ClCompile Include="cTickFunc.cpp" />
     <ClCompile Include="cTimeMgr.cpp" />
     <ClCompile Include="cTrailRender.cpp" />
     <ClCompile Include="cTransform.cpp" />
