--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -327,6 +327,9 @@
     <ClInclude Include="cUI_MenuBar.h">
       <Filter>Component\UI</Filter>
     </ClInclude>
+    <ClInclude Include="cSkill_Thunder.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -610,6 +613,9 @@
     </ClCompile>
     <ClCompile Include="cUI_MenuBar.cpp">
       <Filter>Component\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="cSkill_Thunder.cpp">
+      <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
