--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -134,9 +134,11 @@
     <ClInclude Include="cSkill_FlameRoad.h" />
     <ClInclude Include="cSkill_Front.h" />
     <ClInclude Include="cSkill_MagicShild.h" />
+    <ClInclude Include="cSkill_MagicShot.h" />
     <ClInclude Include="cSkill_Meteo.h" />
     <ClInclude Include="cSkill_Round.h" />
     <ClInclude Include="cSkill_SelfBuff.h" />
+    <ClInclude Include="cSkill_Shot.h" />
     <ClInclude Include="cSkill_SnowStorm.h" />
     <ClInclude Include="cSkill_Surround.h" />
     <ClInclude Include="cSkill_Swing.h" />
@@ -231,9 +233,11 @@
     <ClCompile Include="cSkill_FlameRoad.cpp" />
     <ClCompile Include="cSkill_Front.cpp" />
     <ClCompile Include="cSkill_MagicShild.cpp" />
+    <ClCompile Include="cSkill_MagicShot.cpp" />
     <ClCompile Include="cSkill_Meteo.cpp" />
     <ClCompile Include="cSkill_Round.cpp" />
     <ClCompile Include="cSkill_SelfBuff.cpp" />
+    <ClCompile Include="cSkill_Shot.cpp" />
     <ClCompile Include="cSkill_SnowStorm.cpp" />
     <ClCompile Include="cSkill_Surround.cpp" />
     <ClCompile Include="cSkill_Swing.cpp" />
