버서커 수정중

--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -127,12 +127,14 @@
     <ClInclude Include="cScene_Mgr.h" />
     <ClInclude Include="cScene_testMonster.h" />
     <ClInclude Include="cSetBoundObject.h" />
+    <ClInclude Include="cShowDamage.h" />
     <ClInclude Include="cSingletonBase.h" />
     <ClInclude Include="cSkill_Burserk.h" />
     <ClInclude Include="cSkill_DarkRain.h" />
     <ClInclude Include="cSkill_Escape.h" />
     <ClInclude Include="cSkill_FlameRoad.h" />
     <ClInclude Include="cSkill_Front.h" />
+    <ClInclude Include="cSkill_Howling.h" />
     <ClInclude Include="cSkill_MagicShild.h" />
     <ClInclude Include="cSkill_Meteo.h" />
     <ClInclude Include="cSkill_Round.h" />
@@ -224,12 +226,14 @@
     <ClCompile Include="cScene_Mgr.cpp" />
     <ClCompile Include="cScene_testMonster.cpp" />
     <ClCompile Include="cSetBoundObject.cpp" />
+    <ClCompile Include="cShowDamage.cpp" />
     <ClCompile Include="cSingletonBase.cpp" />
     <ClCompile Include="cSkill_Burserk.cpp" />
     <ClCompile Include="cSkill_DarkRain.cpp" />
     <ClCompile Include="cSkill_Escape.cpp" />
     <ClCompile Include="cSkill_FlameRoad.cpp" />
     <ClCompile Include="cSkill_Front.cpp" />
+    <ClCompile Include="cSkill_Howling.cpp" />
     <ClCompile Include="cSkill_MagicShild.cpp" />
     <ClCompile Include="cSkill_Meteo.cpp" />
     <ClCompile Include="cSkill_Round.cpp" />
