--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -157,6 +157,8 @@
     <ClInclude Include="cUI_Map.h" />
     <ClInclude Include="cUI_MenuBar.h" />
     <ClInclude Include="cUI_SkillDeck.h" />
+    <ClInclude Include="cVideo.h" />
+    <ClInclude Include="cVideoTest.h" />
     <ClInclude Include="cViewDamage.h" />
     <ClInclude Include="cWayPoint.h" />
     <ClInclude Include="cXMesh.h" />
@@ -253,6 +255,8 @@
     <ClCompile Include="cUI_Map.cpp" />
     <ClCompile Include="cUI_MenuBar.cpp" />
     <ClCompile Include="cUI_SkillDeck.cpp" />
+    <ClCompile Include="cVideo.cpp" />
+    <ClCompile Include="cVideoTest.cpp" />
     <ClCompile Include="cViewDamage.cpp" />
     <ClCompile Include="cWayPoint.cpp" />
     <ClCompile Include="cXMesh.cpp" />
